# bluetooth-firmware-pro

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  clang_format.sh  flash_factory.sh  style.c.exclude  style.c.include  toolchain.cmake
.github/workflows/: ci.yaml
app/: CMakeLists.txt  Makefile  ble_app_gcc_nrf52.ld  custom_board.h  data_transmission.c  data_transmission.h  device_config.c  device_config.h  dfu_upgrade.c  dfu_upgrade.h  ecdsa.c  ecdsa.h  fido.h  firmware_config.h  flashled_manage.c  flashled_manage.h  main.c  nfc.c  nfc.h  power_manage.c  power_manage.h  rtc_calendar.c  rtc_calendar.h  sdk_config.h
app/driver_3rdparty/axp/: axp_config.c  axp_config.h  axp_mfd_216.h  axp_supply.c  axp_supply.h
app/driver_3rdparty/lm/: lm_config.c  lm_config.h
ble-firmware/components/ble/ble_advertising/: ble_advertising.c
ble-firmware/components/ble/ble_services/ble_fido/: ble_fido.c  ble_fido.h
ble-firmware/components/libraries/bootloader/: nrf_bootloader.c  nrf_bootloader_info.c  nrf_bootloader_info.h
ble-firmware/components/libraries/bootloader/dfu/: nrf_dfu_req_handler.c
ble-firmware/components/libraries/bootloader/serial_dfu/: nrf_dfu_serial_uart.c
ble-firmware/components/libraries/uart/: app_uart.c  app_uart.h  app_uart_fifo.c
ble-firmware/integration/nrfx/legacy/: nrf_drv_uart.h
ble-firmware/modules/nrfx/drivers/src/: nrfx_twi.c  nrfx_uart.c  nrfx_uarte.c
dfu/: CMakeLists.txt  axp216_config.c  axp216_config.h  dfu_public_key.c  main.c  nrf_crypto_allocator.h  sdk_config.h  secure_bootloader_gcc_nrf52.ld
dfu_legacy/: CMakeLists.txt  main.c  nrf_crypto_allocator.h  nrf_dfu_serial_uart.c
drivers/: i2c_common.h  nrf_flash.c  nrf_flash.h  nrf_i2c.c  nrf_i2c.h  nrf_uicr.c  nrf_uicr.h  util_macros.h
drivers/light/: lm36011.c  lm36011.h
drivers/pmu/: axp2101.c  axp2101.h  axp216.c  axp216.h  ntc_util.c  ntc_util.h  pmu.c  pmu.h  pmu_common.h
legacy_build/.github/workflows/: ci.yaml
legacy_build/v1/.github/workflows/: ci.yaml
legacy_build/v2/.github/workflows/: ci.yaml
utils/: bin2array.py  git_changelog.py  hash.py  jlink_flash.sh  nrfutil_prepare.sh  ota_to_onekey_bin.py  pyproject.toml  requirements.txt  uicr_customer_hex_gen.py  uicr_mbr_hex_gen.py
